@@ -17,6 +17,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -32,7 +33,7 @@ public class OnlineMarketplaceApplication {
         return (args) -> {
 
             List<String> names = new ArrayList<>(List.of("Andrejs", "Anton", "Ruslan", "Lelde", "Ieva"));
-            List<String> surnames = new ArrayList<>(List.of("Matvejevs", "Den", "Dzhubuev", "Brosova", "Krigere"));
+            List<String> surnames = new ArrayList<>(List.of("Matvejevs", "Denisov", "Dzhubuev", "Brosova", "Krigere"));
 
             for (int i = 0; i < names.size(); i++) {
                 User user = new User(names.get(i).toLowerCase() + "@" + names.get(i).toLowerCase() + ".com", names.get(i), surnames.get(i), names.get(i).toLowerCase());
@@ -43,7 +44,7 @@ public class OnlineMarketplaceApplication {
                 user = userRepository.save(user);
             }
 
-            String[][] categories = {
+            String[][] categoryList = {
                 {"EMPLOYMENT", "Vacancy", "Job offers"},
                 {"EMPLOYMENT", "Training course", "All types of courses, including bootcamps"},
                 {"CONSTRUCTION", "Construction material", "All kinds of materials: from bricks to lumber to roof tiles"},
@@ -69,29 +70,47 @@ public class OnlineMarketplaceApplication {
                 {"OTHER", "other", "Everything else not listed in other categories"}
             };
 
-/*
-            for (int i = 0; i < categories.length; i++) {
-                String type = categories[i][0];
-                String name = categories[i][1];
-                String description = categories[i][2];
+            for (int i = 0; i < categoryList.length; i++) {
+                String type = categoryList[i][0];
+                String name = categoryList[i][1];
+                String description = categoryList[i][2];
                 Category category = categoryService.createCategory(new Category().setName(name).setDescription(description).setType(CategoryType.valueOf(type)));
             }
-*/
-
-            Category category = categoryService.createCategory(new Category().setName("Category name").setDescription("Category description").setType(CategoryType.valueOf("ELECTRONICS")));
-
 
             List<User> users = userRepository.findAll();
-//            List<Category> allCategories = categoryService.getAllCategories();
+            List<Category> categories = categoryService.getAllCategories();
+            List<ListingType> listingTypes = new ArrayList<>(List.of(ListingType.values()));
+            List<PriceUnit> priceUnits = new ArrayList<>(List.of(PriceUnit.values()));
+            priceUnits.remove(PriceUnit.valueOf("PIECE"));
+            List<Location> locations = new ArrayList<>(List.of(Location.values()));
+
             log.info(Wordlist.productDescriptions.size() + "");
             log.info(Wordlist.productTitles.size() + "");
             log.info(Wordlist.productPrices.size() + "");
             for (int i = 0; i < Wordlist.productTitles.size(); i++) {
                 Collections.shuffle(users);
-//                Collections.shuffle(allCategories);
-                User user = users.get(0);
-//                Category category = allCategories.get(0);
-                listingService.createListing(new ListingCreateDTO(ListingType.SELL, Wordlist.productTitles.get(i), Wordlist.productDescriptions.get(i), BigDecimal.valueOf(Wordlist.productPrices.get(i)), PriceUnit.PIECE, Location.RIGA, user.getId(), category.getId()));
+                Collections.shuffle(categories);
+                Collections.shuffle(listingTypes);
+                Collections.shuffle(priceUnits);
+                Collections.shuffle(locations);
+                Collections.shuffle(categories);
+
+                ListingType type = listingTypes.getFirst();
+                PriceUnit unit = (type == ListingType.valueOf("SELL")) ? PriceUnit.valueOf("PIECE") : priceUnits.getFirst();
+                Location location = locations.getFirst();
+                User user = users.getFirst();
+                Category category = categories.getFirst();
+
+                listingService.createListing(new ListingCreateDTO(
+                        type,
+                        Wordlist.productTitles.get(i),
+                        Wordlist.productDescriptions.get(i),
+                        BigDecimal.valueOf(Wordlist.productPrices.get(i)),
+                        unit,
+                        location,
+                        user.getId(),
+                        category.getId()
+                ));
             }
         };
     }
